Updates the 'windowname' description in vi.1

--- a/docs/man/vi.1
+++ b/docs/man/vi.1
@@ -8,9 +8,9 @@
 .\"
 .\" See the LICENSE file for redistribution information.
 .\"
-.\"     $Id: vi.1,v 8.54 2011/07/14 00:25:04 zy Exp $ (Berkeley) $Date: 2011/07/14 00:25:04 $
+.\"     $Id: vi.1,v 8.55 2011/08/16 12:31:39 zy Exp $ (Berkeley) $Date: 2011/08/16 12:31:39 $
 .\"
-.TH VI 1 "%Q%"
+.TH VI 1 "16 August, 2011"
 .UC
 .SH NAME
 ex, vi, view \- text editors
@@ -1380,8 +1380,7 @@ command.
 Set the window size for the screen.
 .TP
 .B "windowname [off]"
-Change the icon/window name to the current file name even if it can't
-be restored on editor exit.
+Change the icon/window name to the current file name.
 .TP
 .B "wraplen, wl [0]"
 .I \&Vi
@@ -1592,14 +1591,7 @@ text editors, as distributed in 4.4BSD and 4.4BSD-Lite.
 source for all of these documents is distributed with
 .I nex/nvi
 in the
-.I nvi/USD.doc
-directory of the
-.I nex/nvi
-source code.
-.sp
-The files ``autowrite'', ``input'', ``quoting'' and ``structures''
-found in the
-.I nvi/docs/internals
+.I nvi/docs
 directory of the
 .I nex/nvi
 source code.
