--- a/docs/man/vi.1
+++ b/docs/man/vi.1
@@ -2,22 +2,24 @@
 .\"     The Regents of the University of California.  All rights reserved.
 .\" Copyright (c) 1994, 1995, 1996
 .\"	Keith Bostic.  All rights reserved.
+.\" Copyright (c) 2011
+.\"	Zhihao Yuan.  All rights reserved.
 .\"
 .\" This document may not be republished without written permission from
 .\" Keith Bostic. 
 .\"
 .\" See the LICENSE file for redistribution information.
 .\"
-.\"     $Id: vi.1,v 8.55 2011/08/16 12:31:39 zy Exp $ (Berkeley) $Date: 2011/08/16 12:31:39 $
+.\"     $Id: vi.1,v 8.56 2011/08/23 19:08:44 zy Exp $ (Berkeley) $Date: 2011/08/23 19:08:44 $
 .\"
-.TH VI 1 "16 August, 2011"
+.TH VI 1 "23 August, 2011"
 .UC
 .SH NAME
 ex, vi, view \- text editors
 .SH SYNOPSIS
 .B ex
 [\c
-.B -eFGRrSsv\c
+.B -eFRrSsv\c
 ] [\c
 .BI -c " cmd"\c
 ] [\c
@@ -28,7 +30,7 @@ ex, vi, view \- text editors
 .br
 .B vi
 [\c
-.B -eFGlRrSv\c
+.B -eFlRrSv\c
 ] [\c
 .BI -c " cmd"\c
 ] [\c
@@ -39,7 +41,7 @@ ex, vi, view \- text editors
 .br
 .B view
 [\c
-.B -eFGRrSv\c
+.B -eFRrSv\c
 ] [\c
 .BI -c " cmd"\c
 ] [\c
@@ -1107,9 +1109,8 @@ style) expressions.
 Set the character to perform file path completion on the colon
 command line.
 .TP
-.B "fileencoding [locale]"
-Set the encoding of the current file. The encoding needs to be
-supported by iconv.
+.B "fileencoding, fe [auto detect]"
+Set the encoding of the current file.
 .TP
 .B "flash [on]"
 Flash the screen instead of beeping the keyboard on error.
@@ -1124,9 +1125,8 @@ as long as an upper-case letter does not appear in the search string.
 .B "ignorecase, ic [off]"
 Ignore case differences in regular expressions.
 .TP
-.B "inputencoding [locale]"
-Set the encoding of your input characters. The encoding needs to be
-supported by iconv.
+.B "inputencoding, ie [locale]"
+Set the encoding of your input characters.
 .TP
 .B "keytime [6]"
 The 10th's of a second
@@ -1554,47 +1554,7 @@ $HOME/.exrc
 .IR curses (3),
 .IR dbopen (3)
 .sp
-The ``Vi Quick Reference'' card.
-.sp
-``An Introduction to Display Editing with Vi'', found in the
-``UNIX User's Manual Supplementary Documents''
-section of both the 4.3BSD and 4.4BSD manual sets.
-This document is the closest thing available to an introduction to the
-.I \&vi
-screen editor.
-.sp
-``Ex Reference Manual (Version 3.7)'',
-found in the
-``UNIX User's Manual Supplementary Documents''
-section of both the 4.3BSD and 4.4BSD manual sets.
-This document is the final reference for the
-.I \&ex
-editor, as distributed in most historic 4BSD and System V systems.
-.sp
-``Edit: A tutorial'',
-found in the
-``UNIX User's Manual Supplementary Documents''
-section of the 4.3BSD manual set.
-This document is an introduction to a simple version of the
-.I \&ex
-screen editor.
-.sp
-``Ex/Vi Reference Manual'',
-found in the
-``UNIX User's Manual Supplementary Documents''
-section of the 4.4BSD manual set.
-This document is the final reference for the
-.I \&nex/nvi
-text editors, as distributed in 4.4BSD and 4.4BSD-Lite.
-.PP
-.I Roff
-source for all of these documents is distributed with
-.I nex/nvi
-in the
-.I nvi/docs
-directory of the
-.I nex/nvi
-source code.
+``UNIX User's Manual Supplementary Documents: Text Editing''.
 .SH HISTORY
 The
 .I nex/nvi
