--- a/docs/man/vi.1
+++ b/docs/man/vi.1
@@ -10,7 +10,7 @@
 .\"
 .\" See the LICENSE file for redistribution information.
 .\"
-.\"     $Id: vi.1,v 8.56 2011/08/23 19:08:44 zy Exp $ (Berkeley) $Date: 2011/08/23 19:08:44 $
+.\"     $Id: vi.1,v 8.56 2011/08/23 19:08:44 zy Exp $
 .\"
 .TH VI 1 "23 August, 2011"
 .UC
