--- a/catalog/README
+++ b/catalog/README
@@ -1,4 +1,4 @@
-#	$Id: README,v 8.4 1994/11/22 09:52:04 bostic Exp $ (Berkeley) $Date: 1994/11/22 09:52:04 $
+#	$Id: README,v 8.4 1994/11/22 09:52:04 bostic Exp $
 
 Generally, all non-system error and informational messages in nvi are
 catalog messages, i.e. they can be tailored to a specific langauge.
