Set 'filec' key to \t by default (bypass parsing).

--- a/docs/man/vi.1
+++ b/docs/man/vi.1
@@ -10,7 +10,7 @@
 .\"
 .\" See the LICENSE file for redistribution information.
 .\"
-.\"     $Id: vi.1,v 8.56 2011/08/23 19:08:44 zy Exp $
+.\"     $Id: vi.1,v 8.57 2011/12/23 01:12:46 zy Exp $
 .\"
 .TH VI 1 "23 August, 2011"
 .UC
@@ -1105,7 +1105,7 @@ Regular expressions are extended (i.e.
 .IR egrep (1)\-\c
 style) expressions.
 .TP
-.B "filec [no default]"
+.B "filec [<tab>]"
 Set the character to perform file path completion on the colon
 command line.
 .TP
