--- a/catalog/README
+++ b/catalog/README
@@ -1,4 +1,4 @@
-#	$Id: README,v 8.4 1994/11/22 09:52:04 bostic Exp $
+#	$Id: README,v 8.5 2012/10/19 15:17:44 zy Exp $
 
 Generally, all non-system error and informational messages in nvi are
 catalog messages, i.e. they can be tailored to a specific langauge.
@@ -33,19 +33,7 @@ For example:
 
 	msgq(sp, M_ERR, "002|Error: %d %x", arg1, arg2);
 
-is a format string that displays two arguments.  It is possible, however,
-to reorder the arguments or to not display all of them.  The convention
-nvi uses is the System V printf(3) convention, i.e. "%[0-9]*$" is the name
-of a specific, numbered argument.  For example:
-
-	msgq(sp, M_ERR, "002|Error: %2$d %1$x", arg1, arg2);
-
-displays the arguments in reverse order.
-
-If the system supports this convention in its library printf routines
-(as specified by the test #define NL_ARGMAX), nvi uses those routines.
-Otherwise, there is some serious magic going on in common/msg.c to make
-this all work.
+is a format string that displays two arguments.
 
 Arguments to the msgq function are required to contain ONLY printable
 characters.  No further translation is done by the msgq routine before
@@ -54,14 +42,16 @@ displaying the message on the screen.  For example, in the msgq call:
 	msgq(sp, M_ERR, "003|File: %s", file_name);
 
 "file_name" must contain only printable characters.  The routine
-msg_print() returns a printable version of a string in allocated
-memory.  For example:
+msg_print() returns a printable version of a string; the third argument
+indicates whether the string needs to be freed.  For example:
 
 	char *p;
+	int nf;
 
-	p = msg_print(sp, file_name);
-	msgq(sp, M_ERR, M("003", "File: %s"), p);
-	FREE_SPACE(sp, p, 0);
+	p = msg_print(sp, file_name, &nf);
+	msgq(sp, M_ERR, "003|File: %s", p);
+	if (nf)
+		FREE_SPACE(sp, p, 0);
 
 makes sure that "file_name" is printable before calling the msgq
 routine.
@@ -71,20 +61,17 @@ routine.
 The message catalogs themselves are maintained in two files.  The first
 is the "base file" which contains two fields, a record number and the
 message itself.  All base files are named using the convention
-"vi_<language>.base", e.g. the English one is "vi_english.base".  For
+"<language>.base", e.g. the English one is "english.base".  For
 example:
 
-	002 "Unable to create temporary file"
-	003 "Warning: %s is not a regular file"
-	004 "%s already locked, session is read-only"
-	005 "%s: remove"
-	006 "%s: close"
-	007 "%s: remove"
-	008 "%s: remove"
-	009 "Read-only file, not written; use ! to override"
-	010 "Read-only file, not written"
+	002 "Line length overflow"
+	003 "unable to delete line %lu"
+	004 "unable to append to line %lu"
+	005 "unable to insert at line %lu"
+	006 "unable to store line %lu"
+	007 "unable to get last line"
 
-are the first few lines of the current vi_english.base file.  Note that
+are the first few lines of the current english.base file.  Note that
 message #1 is missing -- the first message of each catalog is a special
 one, so that nvi can recognize message catalog files.  It's added by the
 Makefile script that creates the second version of the message catalog.
@@ -93,27 +80,24 @@ The second file is the file used by nvi to access messages, and is a list
 of the messages, one per line:
 
 	VI_MESSAGE_CATALOG
-	Unable to create temporary fileX
-	Warning: %s is not a regular fileX
-	%s already locked, session is read-onlyX
-	%s: removeX
-	%s: closeX
-	%s: removeX
-	%s: removeX
-	Read-only file, not written; use ! to overrideX
-	Read-only file, not writtenX
+	Line length overflowX
+	unable to delete line %luX
+	unable to append to line %luX
+	unable to insert at line %luX
+	unable to store line %luX
+	unable to get last lineX
 
 Note that all messages have had a trailing 'X' character appended.  This
-is to provide nvi a place to store a trailing nul for the message so that
+is to provide nvi a place to store a trailing '\0' for the message so that
 C library routines that expect one won't be disappointed.
 
-These files are named for their language, e.g. "vi_english".  The second
+These files are named for their language, e.g. "english".  The second
 files are automatically created from the first files.
 
 To create a new catalog for nvi:
 
-Copy the file vi_english.base to a file that you can modify , e.g.  "cp
-vi_english.base vi_german.base".  For each of the messages in the file,
+Copy the file english.base to a file that you can modify , e.g.  "cp
+english.base german.base".  For each of the messages in the file,
 replace the message with the string that you want to use.  To find out
 what the arguments to a message are, I'm afraid you'll have to search
 the source code for the message number.  You can find them fairly quickly
@@ -124,7 +108,7 @@ by doing:
 I'm sorry that there's not an easier way, but I couldn't think of
 anything that wasn't a lot of work.
 
-If, for some reason, you don't have the file vi_english.base, or you
+If, for some reason, you don't have the file english.base, or you
 have new sources for which you want to create a new base catalog, you
 can create it by running the command "make english" in the catalog
 directory.
@@ -156,10 +140,10 @@ a single place.
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 To select a catalog when running nvi, set the "msgcat" option.  If the
 value of this option ends with a '/', it is treated as the name of a
-directory that contains a message catalog "vi_XXXX", where XXXX is the
-value of the LANG environmental variable, if it's set, or the value of
-the LC_MESSAGES environmental variable if it's not.  If neither of those
-environmental variables are set, or if the option doesn't end in a '/',
+directory that contains a message catalog "XXXX", where XXXX is the
+value of the LC_MESSAGES environment variable, if it's set, or the value
+of the LANG environment variable if it's not.  If neither of those
+environment variables are set, or if the option doesn't end in a '/',
 the option is treated as the full path name of the message catalog to use.
 
 If any messages are missing from the catalog, the backup text (English)
