Fix incorrect formatting in manpage.
Closes: #51

--- a/docs/man/vi.1
+++ b/docs/man/vi.1
@@ -981,7 +981,11 @@ command.
 .Cm ;\&
 .Xc
 Repeat the last character find
-.Pq i.e., the last .Cm F , f , T No or Cm t No command
+(i.e., the last
+.Cm F , f , T
+or
+.Cm t
+command)
 .Ar count
 times.
 .Pp
