Cleanup documentation structure
The Makefile seems unused ever since the man page was converted;
mandoc(1) should format it fine without any sort of pre-processing,
as should any version of groff from the last 5 years.

Besides that, there's not much point in having the man page nested two
directories deep.

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ The directory layout is as follows:
     catalog ....... Message catalogs; see catalog/README.
     cl ............ Vi interface to the curses(3) library.
     common ........ Code shared by ex and vi.
-    docs .......... Ex/vi documentation, both current and historic.
+    man ........... Ex/vi documentation
     ex ............ Ex source code.
     regex ......... Modified regex library with wide character support.
     vi ............ Vi source code.
