Fix typo in the man page (the abbreviation for expandtab is et, not ex)

--- a/man/vi.1
+++ b/man/vi.1
@@ -2305,7 +2305,7 @@ The tenths of a second
 waits for a subsequent key to complete an
 .Aq escape
 key mapping.
-.It Cm expandtab , ex Bq off
+.It Cm expandtab , et Bq off
 Expand
 .Aq tab
 characters to
