Add vsplit ex command to the manual

--- a/man/vi.1
+++ b/man/vi.1
@@ -2185,6 +2185,14 @@ Display usage for a
 command.
 .Pp
 .It Xo
+.Cm vs Ns Op Cm plit
+.Op Ar +cmd
+.Op Ar file
+.Xc
+Edit a different file by opening a new screen to the right of the current
+screen.
+.Pp
+.It Xo
 .Op Ar range
 .Cm w Ns Op Cm rite Ns
 .Op Cm !\&
