Add showfilename set option
Pressing control-G all the time to understand 'what file is in what
window' might be tedious. Instead, offer a configurable set option
(default off) to display the file name in the lower left corner.

--- a/man/vi.1
+++ b/man/vi.1
@@ -2505,6 +2505,10 @@ Set the meta characters checked to determine if file name expansion
 is necessary.
 .It Cm shiftwidth , sw Bq 8
 Set the autoindent and shift command indentation width.
+.It Cm showfilename Bq off
+.Nm vi
+only.
+Display the file name on the colon command line.
 .It Cm showmatch , sm Bq off
 .Nm vi
 only.
