--- a/man/vi.1
+++ b/man/vi.1
@@ -2482,7 +2482,7 @@ Set the number of lines about which the editor reports changes or yanks.
 .It Cm ruler Bq off
 .Nm vi
 only.
-Display a row/column ruler on the colon command line.
+Display a row/column/percentage ruler on the colon command line.
 .It Cm scroll , scr Bq "window size / 2"
 Set the number of lines scrolled.
 .It Cm searchincr Bq off
